compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__negate_boolean_as_integer.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2114
expression: "\nfn() {\n  let a = True\n  let b = -a\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn() {
  let a = True
  let b = -a
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:12
  │
4 │   let b = -a
  │            ^

Expected type:

    Int

Found type:

    Bool
